--- a/angular.json
+++ b/angular.json
@@ -91,10 +91,9 @@
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css",
-              "src/styles.css"
+              "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": []
+            "scripts": [  ]
           }
         }
       }
