--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^15.0.0",
     "@angular/platform-browser-dynamic": "^15.0.0",
     "@angular/router": "^15.0.0",
+    "@kurkle/color": "^0.3.2",
     "bootstrap": "^5.3.3",
     "primeflex": "^3.3.1",
     "primeicons": "6.0.1",
