--- a/angular.json
+++ b/angular.json
@@ -22,20 +22,18 @@
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/gp.ico",
-              "src/assets",
-              "src/assets2"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css",
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
-            "scripts": [
-              "https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js",
-              "https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
-            ]
+            "scripts": [ 
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
+             ]
           },
           "configurations": {
             "production": {
@@ -92,19 +90,17 @@
             "tsConfig": "tsconfig.spec.json",
             "assets": [
               "src/gp.ico",
-              "src/assets",
-              "src/assets2"
+              "src/assets"
             ],
             "styles": [
               "src/styles.css",
               "node_modules/primeng/resources/themes/lara-light-blue/theme.css",
-              "https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/css/bootstrap.min.css",
               "node_modules/primeng/resources/primeng.min.css",
-              "node_modules/primeicons/primeicons.css"
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
             "scripts": [ 
-              "https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.11.6/umd/popper.min.js",
-              "https://stackpath.bootstrapcdn.com/bootstrap/5.3.3/js/bootstrap.bundle.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"
              ]
           }
         }
