--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^15.0.0",
     "@kurkle/color": "^0.3.2",
     "@popperjs/core": "^2.11.8",
+    "@types/google.maps": "^3.55.11",
     "bootstrap": "^5.3.3",
     "primeflex": "^3.3.1",
     "primeicons": "6.0.1",
